--- a/app/app/en/contact-us.html
+++ b/app/app/en/contact-us.html
@@ -125,7 +125,7 @@
               <div class="row">
                 <div class="col-md-12 col-sm-6">
                   <h3>E-mail</h3>
-                  <p>Sponsors, Advertising, or Editorial Inquiries<br>
+                  <p>Sponsors, Advertising, or Editorial Inquirie<br>
                     <a href='mailto: naomi@naturesbestphotography.asia'>support@naturesbestphotography.asia</a></p>
                 </div>
 
