--- a/app/app/en/contact-us.html
+++ b/app/app/en/contact-us.html
@@ -139,7 +139,7 @@
               <div class="row">
                 <div class="col-md-12 col-sm-6">
                   <h3>Phone</h3>
-                  <p>+81-90-8329-8081<br>Monday through Friday. Closed on major holidays.</p>
+                  <p>+81-90-8329-8081<br>Monday through Friday. Closed on major holidays</p>
                 </div>
 
                 <div class="col-md-12 col-sm-6">
