--- a/app/app/en/gallery/index.html
+++ b/app/app/en/gallery/index.html
@@ -132,7 +132,7 @@
          </div>
       </header>
       <div class="container mainTitle">
-         <h3 class="gallery_header">winners gallery 2019</h3>
+         <h3 class="gallery_header">winners gallery 2020</h3>
       </div>
       <div class="container">
          <div class="text-center tabsContainerButton">
@@ -782,6 +782,46 @@
             </div>
          </div>
 
+         <!--Ocean HH Alternate-->
+         <div class="card">
+            <div class="container-fliud">
+               <div class="wrapper row">
+                  <div class="preview col-md-12">
+                     <div class="preview-pic tab-content">
+                        <a data-fancybox="gallery"
+                           href="../../../assets/images/gallery_2020/Chien-ting_Hou.jpeg"><img
+                              data-src="../../../assets/images/gallery_2020/Chien-ting_Hou.jpeg"
+                              class="lazy"></a>
+                     </div>
+                  </div>
+                  <div class="details col-md-8">
+                     <h3 class="product-title">HIGHLY HONORED OCEAN</h3>
+                     <div class="clearfix">
+                        <img src="../../../assets/images/gallery_2019/profile/yung_sen_wu_1100_300.jpg"
+                           class="pull-left gap-right mobw100" height="150" width="150">
+                        <div class="photo-title">skirt</div>
+                        <div class="photo-location">Anilao, Philippines</div>
+                        <div class="photographer-name">chien-ting hou</div>
+                        <div class="photographer-location">Taipei, Taiwan</div>
+                        <a href="https://www.facebook.com/checkpoint/block/?next=https%3A%2F%2Fwww.facebook.com%2Facewuuwp"
+                           class="myButton2">Photographer's Website</a>
+                     </div>
+                     <span class="product-description text-justify"><span class="story-span">Story:</span>The black water at night often makes people look forward to and afraid of being hurt, because you don't know what will appear in the next dive, and you often face it with a gambling mood. At the end of the first dive that night, I decided to go into the water with my buddy. After all, it is not easy to cherish every opportunity to dive. Ten minutes after we got into the water, I found that the dive guide next to me kept shaking our flashlight to signal us to pass. We immediately went over and appeared in front of us. It was Ribonfish. We were very excited to shout and high-five underwater. We were very happy. We first followed him in the water and slowly followed him. At this time, we realized that we were no longer angry enough. We took a few photos to commemorate this great moment before the end.
+                     夜のダイビングでは暗くて何が起こるかわからないので楽しみである反面、恐怖でもあります。ある日の夜、私は仲間と一緒にダイビングしていました。水に入ってから数分後、ダイビングガイドが懐中電灯で合図をし、その方向をみるとそこにいたのはフリソデウオでした。 私たちは興奮しハイタッチをしました。ゆっくりと追跡し、何枚か写真を撮りました。
+                     
+                     
+                     </span>
+                     <h5 class="sizes">
+                        <span class="camera-span">CAMERA: Canon 5D MK IV, Sigma 50mm, 1/250, F/22, ISO 640.
+                        </span>
+                     </h5>
+                     <div class="action">
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+
          <!--Ocean HH 4-->
          <div class="card">
             <div class="container-fliud">
@@ -807,9 +847,10 @@
                            class="myButton2">Photographer's Website</a>
                      </div>
                      <span class="product-description text-justify"><span class="story-span">Story:</span> I have the Japanese but the Google tranlation is not understandable.
+                     2019年の年末、Maldivesのダイブクルーズに参加していました。2020年の幕開けとなった朝1本目のダイブでここまで見ることのできなかった念願のマンタが姿を見せました。5,6枚が群れとなり、透明度が高い場所に現れることは珍しく、奇跡のようなひとときでした。まるで我々と遊びながら「Bring it on!!(かかってこい!!)」と言わんばかりの表情をしており、いつも見ているマンタとは一味違う表情が撮影できました。
                      </span>
                      <h5 class="sizes">
-                        <span class="camera-span">NEEDED
+                        <span class="camera-span">CAMERA: Nikon D850, SIGMA 15㎜ F2.8 EX DG DIAGONAL FISHEYE, 1/200, F/7.1, ISO 160.
                         </span>
                      </h5>
                      <div class="action">
@@ -1061,17 +1102,14 @@
                         <img src="../../../assets/images/gallery_2019/profile/minoru_yamasaki_180dpi_300.jpg"
                            class="pull-left gap-right mobw100" height="150" width="150">
                         <div class="photo-title">Escape the Predator</div>
-                        <div class="photo-location">NEEDED</div>
-                        <div class="photographer-name">NEEDED</div>
-                        <div class="photographer-location">NEEDED</div>
+                        <div class="photo-location">Jalandhar, India</div>
+                        <div class="photographer-name">Randeep Singh</div>
+                        <div class="photographer-location">Jalandhar, India</div>
                         <!-- <a href="https://www.instagram.com/ankur_moitra/" class="myButton2">Photographer's Website</a> -->
                      </div>
-                     <span class="product-description text-justify"><span class="story-span">Story:</span> Lorem ipsum
-                        dolor sit amet consectetur adipisicing elit. Magnam facere quod vitae fugit quaerat? In
-                        asperiores veritatis esse labore rem. Dolores, facilis aut veritatis error pariatur mollitia
-                        voluptatem minus aliquid?</span>
+                     <span class="product-description text-justify"><span class="story-span">Story:</span> During this Covid-19 pandemic I guess we all did our best to stay at home. Being in a lockdown doesn’t mean you can’t do any wildlife photography at all. There are many macro subjects inside and around the house if you look close enough. In my home garden I already clicked few macro shots in the past so I thought to look for some more interesting subjects once again. I came across some beetles on a flower. I just waited for the moment to settle down but as soon as they were about to settle on a flower it took off. Beetle took off as a spider was trying to hunt, I saw this beautiful white spider coming out in the open on this same flower who was trying to hunt down the beetle. I guess it was the same spider which my son clicked pictures a day before, it was a crab spider. This spider got onto the end part of the petals of a flower. This spider legs were quiet strong enough to hold on the petals. The way this spider posed, I captured a perfect shot of this predator.</span>
                      <h5 class="sizes">
-                        <span class="camera-span">NEEDED
+                        <span class="camera-span">CAMERA: Nikon D850, Tokina 100mm f/2.8 AT-X M100 AF Pro D Macro, 1/125, F/18, ISO 800.
                         </span>
                      </h5>
                      <div class="action">
