--- a/app/app/en/gallery/index.html
+++ b/app/app/en/gallery/index.html
@@ -538,13 +538,13 @@
                   <div class="details col-md-8">
                      <h3 class="product-title">HIGHLY HONORED LANDSCAPE</h3>
                      <div class="clearfix">
-                        <img src="../../../assets/images/gallery_2020/flat_69_blk.png"
+                        <img src="../../../assets/images/gallery_2020/Biran_Zhao_profile.jpg"
                            class="pull-left gap-right mobw100" height="150" width="150">
                         <div class="photo-title">Snow Mountain</div>
                         <div class="photo-location">Naqubiru County, Tibet，China</div>
                         <div class="photographer-name">Biran Zhao</div>
                         <div class="photographer-location">Guangzhou, China</div>
-                        <!--<a href="" class="myButton2">Photographer's Website</a> -->
+                        <a href="https://tuchong.com/2349895/work/" class="myButton2">Photographer's Website</a>
                      </div>
                      <span class="product-description text-justify"><span class="story-span">Story:</span> This photo was taken on June 13, 2019 in Sapshenshan, Nagqu Ruo County, Tibet. This is a secret place just discovered in 2016. Located in Puzonggou of Yangxiu township at an altitude of 6556 m, there are five snow covered mountains standing side by side. The snowy mountain in this photo is one of them. It is aloof and cold, with clouds and fog, which is hard for ordinary people to see. To overcome altitude sickness I camped at an altitude of 5000 meters, and had a very hard and dangerous journey to the foot of the mountain.
                      写真は、2019年6月13日にチベットのナグッルオ郡サプシェンシャンで撮影されました。 ここは2016年に発見された秘境です。陽朔郷の浦西口にある標高6556 mの場所に5つの雪山が並んでいます。 写真の雪山はその一つです。 雲と霧が多く厳しい寒さで、通常はめったに行くことが出来ません。 私は標高の高さの問題を乗り越えて標高5000メートルでキャンプしながら非常に困難で危険な撮影の旅をしました。</span>
@@ -1175,7 +1175,7 @@
                   <div class="details col-md-8">
                      <h3 class="product-title">HIGHLY HONORED BIRDS</h3>
                      <div class="clearfix">
-                        <img src="../../../assets/images/gallery_2020/flat_69_blk.png"
+                        <img src="../../../assets/images/gallery_2020/malek-alhazza-profile.jpg"
                            class="pull-left gap-right mobw100" height="150" width="150">
                         <div class="photo-title">Attack</div>
                         <div class="photo-location">Kuwait</div>
