--- a/app/ja/index.html
+++ b/app/ja/index.html
@@ -127,7 +127,7 @@
     </header>
 
     <div class="top-hero">
-      <div id="randomImage"><a href=""></a></div>
+      <div id="randomImage"><a href="../ja/gallery/index.html"></a></div>
     </div>
 
   </div>
@@ -437,7 +437,7 @@
   <script>
     var randomImage = {
       paths: [
-        "../../assets/images/japanese-hero-2020.jpg",
+        "../../assets/images/english-hero-2020-winners.jpg",
       ],
 
       generate: function () {
