--- a/app/ja/gallery/index.html
+++ b/app/ja/gallery/index.html
@@ -67,66 +67,73 @@
             <span onclick="openNav()" class="hidden-md hidden-lg  hidden-sm top_menu_toggle"><i onclick="openNav()"
                   class="fa fa-bars" class="top_menu_toggle"></i> </span>
             <div id="mySidenav" class="sidenav top_toggle_nav_bg">
-               <!--mob menu-->
-               <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-               <a href="../">HOME</a>
-               <a href="https://news.naturesbestphotography.asia/news">NEWS</a>
-               <a href="../contest-details.html">CONTEST DETAILS</a>
-               <a href="https://naturesbestphotography.asia/user/entry/entry?lang=en">ENTER</a>
-               <a href="../judges.html">JUDGES</a>
-               <li class="dropdown">
-                  <a data-toggle="dropdown" href="#">WINNERS GALLERY<span class="caret"></span></a></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="../en/gallery/index.html">2020 Gallery</a></li>
-                    <li><a href="../en/gallery/gallery-2019.html">2019 Gallery</a></li>
-                    <li><a href="../en/gallery/gallery-2018.html">2018 Gallery</a></li>
-                    <li><a href="../en/gallery/gallery-2017.html">2017 Gallery</a></li>
-                  </ul>
-                </li>
-               <li class="dropdown">
-                  <a data-toggle="dropdown" href="#">Language<span class="caret"></span></a></a>
-                  <ul class="dropdown-menu">
-                     <li><a href="/en/">English</a></li>
-                     <li><a href="/ru/">Russian</a></li>
-                     <li><a href="/ja/">日本語</a></li>
-                     <li><a href="/sc/">中国語 簡体字</a></li>
-                     <li><a href="/tc/">中国語 繁体字</a></li>
-                     <li><a href="/ko/" class="last">韓国語</a></li>
-                  </ul>
-               </li>
-            </div>
+                <!--mob menu-->
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <a href="../ja/">HOME</a>
+          <a href="https://news.naturesbestphotography.asia/news/ja/">ニュース</a>
+          <a href="../ja/contest-details.html">応募概要</a>
+          <a href="https://naturesbestphotography.asia/user/entry/entry?lang=ja">応募</a>
+          <a href="../ja/judges.html">審査員</a>
+
+          <li class="dropdown">
+            <a data-toggle="dropdown" href="#">ギャラリー<span class="caret"></span></a></a>
+            <ul class="dropdown-menu">
+              <li><a href="../ja/gallery/index.html">2020 ギャラリー</a></li>
+              <li><a href="../ja/gallery/gallery-2019.html">2019 ギャラリー</a></li>
+              <li><a href="../ja/gallery/gallery-2018.html">2018 ギャラリー</a></li>
+              <li><a href="../ja/gallery/gallery-2017.html">2017 ギャラリー</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a data-toggle="dropdown" href="#"><span style="text-transform: none">Language</span><span
+                class="caret"></span></a></a>
+            <ul class="dropdown-menu">
+              <li><a href="/en/">English</a></li>
+              <li><a href="/ru/">Russian</a></li>
+              <li><a href="/ja/">日本語</a></li>
+              <li><a href="/sc/">中国語 簡体字</a></li>
+              <li><a href="/tc/">中国語 繁体字</a></li>
+              <li><a href="/ko/" class="last">韓国語</a></li>
+            </ul>
+          </li>
+        </div>
 
 
 
-            <div class="row navContainer hidden-xs">
+        <div class="row navContainer hidden-xs">
 
-               <ul class="nav navbar-nav">
-                  <li><a href="../">HOME</a></li>
-                  <li><a href="https://news.naturesbestphotography.asia/news">NEWS</a></li>
-                  <li><a href="../contest-details.html">CONTEST DETAILS</a></li>
-                  <li><a href="https://naturesbestphotography.asia/user/entry/entry?lang=en">ENTER</a></li>
-                  <li><a href="../judges.html">JUDGES</a></li>
-                  <li class="dropdown">
-                     <a data-toggle="dropdown" href="#">WINNERS GALLERY<span class="caret"></span></a></a>
-                     <ul class="dropdown-menu">
-                       <li><a href="../en/gallery/index.html">2020 Gallery</a></li>
-                       <li><a href="../en/gallery/gallery-2019.html">2019 Gallery</a></li>
-                       <li><a href="../en/gallery/gallery-2018.html">2018 Gallery</a></li>
-                       <li><a href="../en/gallery/gallery-2017.html">2017 Gallery</a></li>
-                     </ul>
-                   </li>
-                  <li class="dropdown">
-                     <a data-toggle="dropdown" href="#">Language<span class="caret"></span></a></a>
-                     <ul class="dropdown-menu">
-                        <li><a href="/en/">English</a></li>
-                        <li><a href="/ru/">Russian</a></li>
-                        <li><a href="/ja/">日本語</a></li>
-                        <li><a href="/sc/">中国語 簡体字</a></li>
-                        <li><a href="/tc/">中国語 繁体字</a></li>
-                        <li><a href="/ko/" class="last">韓国語</a></li>
-                     </ul>
-                  </li>
-               </ul>
+
+          <ul class="nav navbar-nav">
+            <li><a href="../ja/">HOME</a></li>
+            <li><a href="https://news.naturesbestphotography.asia/news/ja/">ニュース</a></li>
+            <li><a href="../ja/contest-details.html">応募概要</a></li>
+            <li><a href="https://naturesbestphotography.asia/user/entry/entry?lang=ja">応募</a></li>
+            <li><a href="../ja/judges.html">審査員</a></li>
+            <li></li>
+            <li>
+            <li class="dropdown">
+              <a data-toggle="dropdown" href="#">ギャラリー<span class="caret"></span></a></a>
+              <ul class="dropdown-menu">
+                <li><a href="../ja/gallery/index.html">2020 ギャラリー</a></li>
+                <li><a href="../ja/gallery/gallery-2019.html">2019 ギャラリー</a></li>
+                <li><a href="../ja/gallery/gallery-2018.html">2018 ギャラリー</a></li>
+                <li><a href="../ja/gallery/gallery-2017.html">2017 ギャラリー</a></li>
+              </ul>
+            </li>
+            </li>
+            <li class="dropdown">
+              <a data-toggle="dropdown" href="#"><span style="text-transform: none">Language</span><span
+                  class="caret"></span></a></a>
+              <ul class="dropdown-menu">
+                <li><a href="/en/">English</a></li>
+                <li><a href="/ru/">Russian</a></li>
+                <li><a href="/ja/">日本語</a></li>
+                <li><a href="/sc/">中国語 簡体字</a></li>
+                <li><a href="/tc/">中国語 繁体字</a></li>
+                <li><a href="/ko/" class="last">韓国語</a></li>
+              </ul>
+            </li>
+          </ul>
 
             </div>
          </div>
