--- a/app/ja/gallery/index.html
+++ b/app/ja/gallery/index.html
@@ -1377,7 +1377,7 @@
                         <div class="photo-title">Relaxing Beauty</div>
                         <div class="photo-location">Langkawi, Malaysia</div>
                         <div class="photographer-name">Arshdeep Singh</div>
-                        <div class="photographer-location">Mandir, India</div>
+                        <div class="photographer-location">Jalandhar, India</div>
                         <a href="https://www.instagram.com/arshdeep_the_photographer" class="myButton2">Photographer's
                            Website</a>
                      </div>
