change to Markus

--- a/app/en/gallery/index.html
+++ b/app/en/gallery/index.html
@@ -865,7 +865,7 @@
                      </div>
                      <span class="product-description text-justify"><span class="story-span">Story:</span> I've always been amazed by red weaver ants and whenever I come across them I'll follow their path. I found these 2 ants helping each other to get their prey over a rocky path to reach their nest. I waited for sometime for this shot while both of these ants were trying different ways to hand over the prey to the other. At last they found the exact spot and it was just a split second for me to capture this amazing moment.</span>
                      <h5 class="sizes">
-                        <span class="camera-span">CAMERA: Nikon D7100, Tamron SP AF60MM F2.8 Macro, 1/100, F/25, ISO 250.
+                        <span class="camera-span">CAMERA: Nikon D7100, Tamron SP AF90MM F2.8 Macro, 1/100, F/16, ISO 500, YongNou YN560III, MK Diffuser.
                         </span>
                      </h5>
                      <div class="action">
