--- a/app/ja/gallery/index.html
+++ b/app/ja/gallery/index.html
@@ -877,7 +877,7 @@
                      </div>
                      <span class="product-description text-justify"><span class="story-span">Story:</span> いつもツムギアリの行動に驚かされます。遭遇すると必ず私は彼らの跡をつけていきます。この２匹のアリがお互いに助け合いながら、どうしたら岩だらけの小道を越えて獲物を持って巣に戻れるかと、苦労をしている姿を追いました。この一枚を撮るのにしばらくの間じっと見つめていましたが、その間アリたちは運ぶための異なる方法を模索していました。そしてようやく方法が見つかりその様子を撮影することが出来ました。</span>
                      <h5 class="sizes">
-                        <span class="camera-span">CAMERA: Nikon D7100, Tamron SP AF60MM F2.8 Macro, 1/100, F/25, ISO 250.
+                        <span class="camera-span">CAMERA: Nikon D7100, Tamron SP AF90MM F2.8 Macro, 1/100, F/16, ISO 500, YongNou YN560III, MK Diffuser.
                         </span>
                      </h5>
                      <div class="action">
