--- a/app/en/index.html
+++ b/app/en/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Your nature photo displayed in the worlds most visited museum. Enter your photo in the world’s most prestigious nature photo contest.">
   <link rel="alternate" href="http://naturesbestphotography.asia/ja/" hreflang="ja">
   <link rel="alternate" href="http://naturesbestphotography.asia/en/" hreflang="en">
-  <meta name="keywords" content="nature,photography,asia,contest,Smithsonian’s National Museum">
+  <meta name="keywords" content="nature,photography,asia,contest">
   <meta name="author" content="Nature's Best Photography Asia">
   <link rel="stylesheet" type="text/css" href="../../assets/styles/main.css?1455274908" media="all">
 
